--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
           characterEncoding: utf-8
           CharSet: utf-8
           useUnicode: true
+        dialect: org.hibernate.dialect.Oracle12cDialect
   datasource:
     url: jdbc:oracle:thin:@localhost:1521:chatdb
     username: app
